objects/Attendee_solution__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Festival__c</fullName>
        <label>Festival</label>
        <referenceTo>Festival_solution__c</referenceTo>
        <relationshipLabel>Attendees (solution)</relationshipLabel>
        <relationshipName>Attendees_solution</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Source__c</fullName>
        <description>Where the attendee got their ticket from.</description>
        <label>Purchase Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Official Website</fullName>
                </value>
                <value>
                    <fullName>3rd Party Ticket Vendor</fullName>
                </value>
                <value>
                    <fullName>Box Office</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ticket_Type__c</fullName>
        <label>Ticket Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General Admission</fullName>
                    <default>true</default>
                    <label>General Admission</label>
                </value>
                <value>
                    <fullName>VIP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tickets_purchased__c</fullName>
        <description>Number of tickets purchased by the attendee.</description>
        <label>Tickets purchased</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Spent__c</fullName>
        <description>This determines how much the attendee spent on the amount of tickets they purchased. General admission tickets cost $50, and VIP tickets cost $100.</description>
        <formula>IF(ISPICKVAL(Ticket_Type__c, &quot;General Admission&quot;), 50 *  Tickets_purchased__c , 100 *  Tickets_purchased__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Spent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Attendee (solution)</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Attendee (solution) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendees (solution)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>No_more_than_8_tickets_per_attendee</fullName>
        <active>true</active>
        <description>To avoid scalping, we limit the number of tickets that any one person can purchase to 8.</description>
        <errorConditionFormula>Tickets_purchased__c  &gt; 8</errorConditionFormula>
        <errorMessage>One attendee can purchase no more than 8 tickets!</errorMessage>
    </validationRules>
</CustomObject>